--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name=viewport content='width=device-width'>
-    <link rel=stylesheet href='/StyleSheets/TR/base'>
+    <link rel=stylesheet href='https://www.w3.org/StyleSheets/TR/base'>
     <style>
       img { border: 0; }
       table { border-collapse: collapse;border-spacing: 0;}
@@ -14,7 +14,7 @@
   </head>
   <body>
     <p>
-      <a href='http://www.w3.org/'><img width=72 height=48 alt=W3C src='/Icons/w3c_home'></a>
+      <a href='https://www.w3.org/'><img width=72 height=48 alt=W3C src='https://www.w3.org/Icons/w3c_home'></a>
     </p>
     <h1>HTML charter</h1>
 
