--- a/html-plan.html
+++ b/html-plan.html
@@ -12,6 +12,14 @@
       max-width: 60em;
       margin: auto;;
     }
+    .sign {
+      font-size: small;
+      margin-top: 2em;
+      font-style: italic;
+      border-top: 1px solid black;
+      padding-top: 0.5ex;
+    }
+
     </style>
 </head>
 <body>
@@ -112,5 +120,9 @@ See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>.
 
 <p id='footnote1'><em>data metrics</em>: httparchive, commoncrawl, browser usage counters, browser status, tests, test results (wpt, caniuse)</p>
 
+
+<p class='sign'>
+<a href="https://www.twitter.com/plhw3org">@plhw3org</a>, contribute: <a href="https://github.com/w3c/charter-html">w3c/charter-html</a>
+</p>
 </body>
 </html>
