--- a/intent-to-standardize.html
+++ b/intent-to-standardize.html
@@ -14,6 +14,14 @@
     h1 { font-size: large;}
     h2 { color: black; font-size: normal;}
     p { margin-top: 1em;}
+    .sign {
+      font-size: small;
+      margin-top: 2em;
+      font-style: italic;
+      border-top: 1px solid black;
+      padding-top: 0.5ex;
+    }
+
     </style>
   </head>
 <body>
@@ -71,5 +79,8 @@
 
 <p>(this form was largely inspired from Blink <a href='https://docs.google.com/a/chromium.org/document/d/1vlTlsQKThwaX0-lj_iZbVTzyqY7LioqERU8DK3u3XjI/edit#bookmark=id.uptkx07pm53s'>Intent to Implement and Ship templates</a>)</p>
 
-<p></body>
+<p class='sign'>
+<a href="https://www.twitter.com/plhw3org">@plhw3org</a>, contribute: <a href="https://github.com/w3c/charter-html">w3c/charter-html</a>
+</p>
+</body>
 </html>
