--- a/html-plan.html
+++ b/html-plan.html
@@ -59,7 +59,7 @@ The HTML Working Group&#x27;s goal is to monitor interoperability of the impleme
 
  <h2 id='org'>Organization</h2>
  <h3 id='license'>Licensing</h3>
-<p>A GPL-compatible with attribution License, such as the <a href='http://www.w3.org/Consortium/Legal/2015/copyright-software-and-text'>W3C Software and Text license</a>, will be used for the HTML specification and the HTML extensions in the Community Group and the Working Group.
+<p>A GPL-compatible with attribution License, such as the <a href='http://www.w3.org/Consortium/Legal/2015/copyright-software-and-document.html'>W3C Software and Document license</a>, will be used for the HTML specification and the HTML extensions in the Community Group and the Working Group.
 
  <h3 id='leader'>Leadership</h3>
 <p>The HTML Incubator Community Group and the HTML Working Group are expected to have well-coordinated good leaders, well accepted and recognized by the community. The leaders should be selected to be magnets for the community - that HTML@W3C has become an effective place to get work done.  The leaders must ensure efficient progress and prevent discussion derailments. Due process, broad consensus, transparency, balance, and openness are the principles guiding the Community and Working Groups.
