Scope of Community Group is Web Platform

--- a/html-plan.html
+++ b/html-plan.html
@@ -37,7 +37,7 @@
 <li>Maintenance (aka actual interoperability)</li></ol>
  <h2 id='incubating'>Incubating new ideas</h2>
 
-<p>There is one Community Group, called the <strong>HTML Incubator</strong> Community Group (HTML ICG). Its mission is to attract, foster, and refine ideas and proposals around HTML, by facilitating communication with developers at large or by using data-driven metrics to identify common patterns that warrant first class support in HTML. The HTML Working Group will encourage ideas to be incubated in the HTML ICG.  If the HTML ICG works with consensus, it will significantly reduce the effort to transition from CG to W3C Recommendation.
+<p>There is one Community Group, called the <strong>Web Platform Incubator</strong> Community Group (Web Platform ICG). Its mission is to attract, foster, and refine ideas and proposals around the Web Platform, by facilitating communication with developers at large or by using data-driven metrics to identify common patterns that warrant first class support in the Web Platform. The HTML Working Group will encourage ideas to be incubated in the Web Platform ICG.  If the Web Platform ICG works with consensus, it will significantly reduce the effort to transition from CG to W3C Recommendation.
 
  <h3 id='transition'>From ideas to standards work</h3>
 <p>Once a proposal becomes mature enough to justify formal standardization, it becomes the mission and responsibility of the Working Group to ensure proper acceptance, through consensus, wide reviews, <a href='#footnote1'>data-driven</a> analysis, and technical merit. A proposal may become ready for standardization efforts because of implementation experience or broad support.
@@ -62,10 +62,10 @@ The HTML Working Group&#x27;s goal is to monitor interoperability of the impleme
 <p>A GPL-compatible with attribution License, such as the <a href='http://www.w3.org/Consortium/Legal/2015/copyright-software-and-document.html'>W3C Software and Document license</a>, will be used for the HTML specification and the HTML extensions in the Community Group and the Working Group.
 
  <h3 id='leader'>Leadership</h3>
-<p>The HTML Incubator Community Group and the HTML Working Group are expected to have well-coordinated good leaders, well accepted and recognized by the community. The leaders should be selected to be magnets for the community - that HTML@W3C has become an effective place to get work done.  The leaders must ensure efficient progress and prevent discussion derailments. Due process, broad consensus, transparency, balance, and openness are the principles guiding the Community and Working Groups.
+<p>The Web Platform Incubator Community Group and the HTML Working Group are expected to have well-coordinated good leaders, well accepted and recognized by the community. The leaders should be selected to be magnets for the community - that HTML@W3C has become an effective place to get work done.  The leaders must ensure efficient progress and prevent discussion derailments. Due process, broad consensus, transparency, balance, and openness are the principles guiding the Community and Working Groups.
 
  <h3 id='contributions'>Contributions and Communications</h3>
-<p>The HTML Incubator Community Group and the HTML Working Group conduct their work primarily through github repositories, for contributions and communications. <a href='http://discourse.specifiction.org/'>Discourse</a> may be used for broad discussions with the community.  There will be one github repository per document.  Similar to open-source software development, peer production is encouraged: changes will be executed through Pull Requests, where each pull request gets preferably reviewed before being merged.<br>
+<p>The Web Platform Incubator Community Group and the HTML Working Group conduct their work primarily through github repositories, for contributions and communications. <a href='http://discourse.specifiction.org/'>Discourse</a> may be used for broad discussions with the community.  There will be one github repository per document.  Similar to open-source software development, peer production is encouraged: changes will be executed through Pull Requests, where each pull request gets preferably reviewed before being merged.<br>
 See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>.
 </p>
 
@@ -73,11 +73,11 @@ See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>.
 
  <h3 id='participation'>Participation</h3>
 
-<p>All Working Group participants are also encouraged to be participants in the HTML Incubator Community Group.  A major objective of this new plan is to encourage participation by those who can best drive innovation and interoperability for the web platform.
+<p>All Working Group participants are also encouraged to be participants in the Web Platform Incubator Community Group.  A major objective of this new plan is to encourage participation by those who can best drive innovation and interoperability for the web platform.
 
  <h2 id='directions'>Technical Directions</h2>
 
-<p>While the technical direction for HTML will continue to evolve, here are some of the topics which we already know to be of interest for HTML.next, and should be considered by the HTML ICG based on data-driven metrics to identify common patterns:
+<p>While the technical direction for HTML will continue to evolve, here are some of the topics which we already know to be of interest for HTML.next, and should be considered by the Web Platform ICG based on data-driven metrics to identify common patterns:
 
 <dl>
 <dt id='mobile'>Markup for mobile UI widgets</dt>
