--- a/html-plan.html
+++ b/html-plan.html
@@ -34,28 +34,42 @@
 <li>Incubating new ideas</li>
 <li>Efficient data-driven standards work</li>
 <li>Interoperability</li>
-<li>Maintenance (aka actual interoperability)</li></ol>
- <h2 id='incubating'>Incubating new ideas</h2>
+<li>Maintenance (aka actual interoperability)</li>
+</ol>
 
-<p>There is one Community Group, called the <strong>Web Platform Incubator</strong> Community Group (Web Platform ICG). Its mission is to attract, foster, and refine ideas and proposals around the Web Platform, by facilitating communication with developers at large or by using data-driven metrics to identify common patterns that warrant first class support in the Web Platform. The HTML Working Group will encourage ideas to be incubated in the Web Platform ICG.  If the Web Platform ICG works with consensus, it will significantly reduce the effort to transition from CG to W3C Recommendation.
+<h2 id='incubating'>Incubating new ideas</h2>
 
- <h3 id='transition'>From ideas to standards work</h3>
-<p>Once a proposal becomes mature enough to justify formal standardization, it becomes the mission and responsibility of the Working Group to ensure proper acceptance, through consensus, wide reviews, <a href='#footnote1'>data-driven</a> analysis, and technical merit. A proposal may become ready for standardization efforts because of implementation experience or broad support.
+<p>There is one Community Group, called the <strong>Web Platform Incubator</strong> Community Group (Web Platform ICG). Its mission is to attract, foster, and incubate ideas and proposals around the Web Platform, by facilitating communication with developers at large or by using data-driven metrics to identify common patterns that warrant first class support in the Web Platform. If the Web Platform ICG works with consensus, it will significantly reduce the effort to transition from CG to W3C Recommendation.
 
-<p>Supporters of the proposal should perform an &quot;<em><a href='intent-to-standardize.html'>Intent to Standardize</a></em>&quot; assessment, outlining use cases, as well as implementation considerations, security, privacy, accessibility, and internationalization impacts. It is the role of the Working Group to evaluate such assessment before starting a standardization effort.
+<p>Note that the creation of the Web Platform ICG would not preclude new ideas from being discussed in other Community or Working Groups.</p>
 
- <h2 id='efficent'>Efficient data-driven standards work</h2>
-<p>The goal of  the <strong>HTML Working Group</strong> is to maintain and produce incremental revisions to the HTML specification and its extensions, and drive interoperability of implementations.
-As in the CSS or WebApps Working Groups, a limited number of individuals from the general public can become (true) invited experts based on expertise.
+<h3 id='transition'>From ideas to standards work</h3>
 
-<p>Each document worked in the Working Group should have two branches: a <strong>development</strong> one and a <strong>stable</strong> one. Daily work is expected to happen on the dev branch, including bug fixing. When applicable, changes must be backported to the stable branch. It is encouraged to have different individuals between the dev and the stable branches. The goal of the development branch is to encourage convergence of the implementations towards interoperability as well as introduce new function. The goal of the stable branch is to document expected interoperability.
+<p>Once a proposal becomes mature enough to justify formal standardization, it becomes the mission and responsibility of a Working Group to ensure proper acceptance, through consensus, wide reviews, <a href='#footnote1'>data-driven</a> analysis, and technical merit. A proposal may become ready for standardization efforts because of implementation experience or broad support.
 
- <h2 id='interop'>Interoperability</h2>
+<p>Supporters of the proposal should perform an &quot;<em><a href='intent-to-standardize.html'>Intent to Standardize</a></em>&quot; assessment, outlining use cases, as well as implementation considerations, security, privacy, accessibility, and internationalization impacts. It is the role of the proper Working Group (HTML, CSS, WebApps, etc.) to evaluate such assessment before starting a standardization effort.</p>
+
+<h2 id='efficent'>Efficient data-driven standards work</h2>
+
+<p>
+The goal of  the <strong>HTML Working Group</strong> is to continue the development of the HTML language. As such, it will continue to maintain and produce incremental revisions to the HTML specification and its extensions, and drive interoperability of implementations.
+As in the CSS or WebApps Working Groups, a limited number of individuals from the general public can become (true) invited experts based on expertise.</p>
+
+<p>
+Each document worked in the Working Group should have two branches: a <strong>development</strong> one and a <strong>stable</strong> one. Daily work is expected to happen on the dev branch, including bug fixing. When applicable, changes must be backported to the stable branch. It is encouraged to have different individuals between the dev and the stable branches. The goal of the development branch is to encourage convergence of the implementations towards interoperability as well as introduce new function. The goal of the stable branch is to document expected interoperability.
+</p>
+
+<p>
+The amount of resources from the W3C Team will vary depending on the need for innovation and interoperability around HTML.
+</p>
+
+<h2 id='interop'>Interoperability</h2>
 <p>The HTML Working Group is expected to demonstrate interoperability to move stable branches towards W3C Recommendation status. It is recommended to have a common set of exit criteria for the modules. This effort must be coordinated with testing through the Test the Web Forward efforts.
 
- <h2 id='maintenance'>Maintenance</h2>
-<p>Alhougth we demonstrate interoperability while moving to W3C Recommendation status, the Web Platform changes and we need to continually update the specifications to maintain actual interoperability in the field.
-The HTML Working Group&#x27;s goal is to monitor interoperability of the implementations to <strong>achieve actual interoperability</strong>. As such, it is expected to maintain HTML and its extensions, and the Chairs need to ensure that bugs get property triaged, <strong>prioritized</strong>, and addressed.
+<h2 id='maintenance'>Maintenance</h2>
+
+<p>Althougth we demonstrate interoperability while moving to W3C Recommendation status, the Web Platform changes and we need to continually update the specifications to maintain actual interoperability <em>in the field</em>.
+The HTML Working Group&#x27;s goal is to monitor interoperability of the implementations to <strong>achieve actual interoperability</strong>. As such, it is expected to maintain HTML and its extensions, and the Chairs need to ensure that bugs get property triaged, <strong>prioritized</strong>, and addressed. The triage and prioritarization should be based on real-world usage.</p>
 
  <h2 id='org'>Organization</h2>
  <h3 id='license'>Licensing</h3>
