Added W3C Team participation, continuity between CG and WG, and common communication means

--- a/html-plan.html
+++ b/html-plan.html
@@ -71,25 +71,30 @@ The amount of resources from the W3C Team will vary depending on the need for in
 <p>Althougth we demonstrate interoperability while moving to W3C Recommendation status, the Web Platform changes and we need to continually update the specifications to maintain actual interoperability <em>in the field</em>.
 The HTML Working Group&#x27;s goal is to monitor interoperability of the implementations to <strong>achieve actual interoperability</strong>. As such, it is expected to maintain HTML and its extensions, and the Chairs need to ensure that bugs get property triaged, <strong>prioritized</strong>, and addressed. The triage and prioritarization should be based on real-world usage.</p>
 
- <h2 id='org'>Organization</h2>
- <h3 id='license'>Licensing</h3>
+<h2 id='org'>Organization</h2>
+<h3 id='license'>Licensing</h3>
 <p>A GPL-compatible with attribution License, such as the <a href='http://www.w3.org/Consortium/Legal/2015/copyright-software-and-document.html'>W3C Software and Document license</a>, will be used for the HTML specification and the HTML extensions in the Community Group and the Working Group.
 
- <h3 id='leader'>Leadership</h3>
+<h3 id='leader'>Leadership</h3>
 <p>The Web Platform Incubator Community Group and the HTML Working Group are expected to have well-coordinated good leaders, well accepted and recognized by the community. The leaders should be selected to be magnets for the community - that HTML@W3C has become an effective place to get work done.  The leaders must ensure efficient progress and prevent discussion derailments. Due process, broad consensus, transparency, balance, and openness are the principles guiding the Community and Working Groups.
 
  <h3 id='contributions'>Contributions and Communications</h3>
+
 <p>The Web Platform Incubator Community Group and the HTML Working Group conduct their work primarily through github repositories, for contributions and communications. <a href='http://discourse.specifiction.org/'>Discourse</a> may be used for broad discussions with the community.  There will be one github repository per document.  Similar to open-source software development, peer production is encouraged: changes will be executed through Pull Requests, where each pull request gets preferably reviewed before being merged.<br>
-See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>.
+See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>. The Community and Working Groups will use common communication means, to facilitate participation and continuity.
 </p>
 
 <p>Regular activity summaries around the github repositories must be provided.
 
- <h3 id='participation'>Participation</h3>
+<h3 id='participation'>Participation</h3>
 
-<p>All Working Group participants are also encouraged to be participants in the Web Platform Incubator Community Group.  A major objective of this new plan is to encourage participation by those who can best drive innovation and interoperability for the web platform.
+<p>All Working Group participants are also encouraged to be participants in the Web Platform Incubator Community Group.  A major objective of this new plan is to encourage participation by those who can best drive innovation and interoperability for the web platform. When an idea gets transitioned into the Working Group, care should be taken in ensuring continuity in participation.</p>
 
- <h2 id='directions'>Technical Directions</h2>
+<h3 id='team'>Team Participation</h3>
+
+<p>W3C Team will participate in both Groups, integrate data sources for interoperability and prioritarization purposes, and help the leadership with transitioning ideas.</p>
+
+<h2 id='directions'>Technical Directions</h2>
 
 <p>While the technical direction for HTML will continue to evolve, here are some of the topics which we already know to be of interest for HTML.next, and should be considered by the Web Platform ICG based on data-driven metrics to identify common patterns:
 
