--- a/html-plan.html
+++ b/html-plan.html
@@ -39,9 +39,11 @@
 
 <h2 id='incubating'>Incubating new ideas</h2>
 
-<p>There is one Community Group, called the <strong>Web Platform Incubator</strong> Community Group (Web Platform ICG). Its mission is to attract, foster, and incubate ideas and proposals around the Web Platform, by facilitating communication with developers at large or by using data-driven metrics to identify common patterns that warrant first class support in the Web Platform. If the Web Platform ICG works with consensus, it will significantly reduce the effort to transition from CG to W3C Recommendation.
-
-<p>Note that the creation of the Web Platform ICG would not preclude new ideas from being discussed in other Community or Working Groups.</p>
+<p>There is one Community Group, called the <strong>Web Platform Incubator</strong> Community Group (Web Platform ICG). Its mission is to attract, foster, and incubate ideas and proposals around the Web Platform, by facilitating communication with developers at large or by using data-driven metrics to identify common patterns that warrant first class support in the Web Platform. If the Web Platform ICG works with consensus, it will significantly reduce the effort to transition from CG to W3C Recommendation.</p>
+<p>
+The W3C Team and Leadership of the Community and Working Groups should ensure proper transitioning of ideas towards the standardization track, while also ensuring proper continuity in participation.
+</p>
+<p>Note that the creation of the Web Platform ICG would not preclude new ideas from being discussed in other Community or Working Groups. It simply provides an easy forum with the Community already present without the need to create one more new Community Group if one doesn't wish to.</p>
 
 <h3 id='transition'>From ideas to standards work</h3>
 
@@ -64,6 +66,7 @@ The amount of resources from the W3C Team will vary depending on the need for in
 </p>
 
 <h2 id='interop'>Interoperability</h2>
+
 <p>The HTML Working Group is expected to demonstrate interoperability to move stable branches towards W3C Recommendation status. It is recommended to have a common set of exit criteria for the modules. This effort must be coordinated with testing through the Test the Web Forward efforts.
 
 <h2 id='maintenance'>Maintenance</h2>
@@ -72,19 +75,23 @@ The amount of resources from the W3C Team will vary depending on the need for in
 The HTML Working Group&#x27;s goal is to monitor interoperability of the implementations to <strong>achieve actual interoperability</strong>. As such, it is expected to maintain HTML and its extensions, and the Chairs need to ensure that bugs get property triaged, <strong>prioritized</strong>, and addressed. The triage and prioritarization should be based on real-world usage.</p>
 
 <h2 id='org'>Organization</h2>
+
 <h3 id='license'>Licensing</h3>
-<p>A GPL-compatible with attribution License, such as the <a href='http://www.w3.org/Consortium/Legal/2015/copyright-software-and-document.html'>W3C Software and Document license</a>, will be used for the HTML specification and the HTML extensions in the Community Group and the Working Group.
+<p>
+A GPL-compatible with attribution License, such as the <a href='http://www.w3.org/Consortium/Legal/2015/copyright-software-and-document.html'>W3C Software and Document license</a>, will be used for the HTML specification and the HTML extensions in the Community Group and the Working Group.
+</p>
 
 <h3 id='leader'>Leadership</h3>
-<p>The Web Platform Incubator Community Group and the HTML Working Group are expected to have well-coordinated good leaders, well accepted and recognized by the community. The leaders should be selected to be magnets for the community - that HTML@W3C has become an effective place to get work done.  The leaders must ensure efficient progress and prevent discussion derailments. Due process, broad consensus, transparency, balance, and openness are the principles guiding the Community and Working Groups.
+
+<p>The Web Platform Incubator Community Group and the HTML Working Group are expected to have well-coordinated good leaders, well accepted and recognized by the community. The leaders should be selected to be magnets for the community - that HTML@W3C has become an effective place to get work done.  The leaders must ensure efficient progress and prevent discussion derailments. Due process, broad consensus, transparency, balance, and openness are the principles guiding the Community and Working Groups.</p>
 
  <h3 id='contributions'>Contributions and Communications</h3>
 
 <p>The Web Platform Incubator Community Group and the HTML Working Group conduct their work primarily through github repositories, for contributions and communications. <a href='http://discourse.specifiction.org/'>Discourse</a> may be used for broad discussions with the community.  There will be one github repository per document.  Similar to open-source software development, peer production is encouraged: changes will be executed through Pull Requests, where each pull request gets preferably reviewed before being merged.<br>
-See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>. The Community and Working Groups will use common communication means, to facilitate participation and continuity.
+See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>. The Community and Working Groups will use common communication means, to facilitate participation and continuity (e.g. similar github repositories or list).
 </p>
 
-<p>Regular activity summaries around the github repositories must be provided.
+<p>Regular activity summaries around the github repositories must be provided.</p>
 
 <h3 id='participation'>Participation</h3>
 
@@ -134,7 +141,7 @@ See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>. T
 
 <dt id='a11y'>Accessibility</dt>
 
-<dd>Much useful work is still needed in order for the Web platform to be accessible.</dd>
+<dd>Much useful work is still needed in order for the Web platform to be accessible, such as <a href='https://specs.webplatform.org/common-panel/bkardell/gh-pages/'>panels</a>.</dd>
 
 </dl>
 
