Added more on data-driven and quaterly meetings

--- a/html-plan.html
+++ b/html-plan.html
@@ -69,6 +69,8 @@ The amount of resources from the W3C Team will vary depending on the need for in
 
 <p>The HTML Working Group is expected to demonstrate interoperability to move stable branches towards W3C Recommendation status. It is recommended to have a common set of exit criteria for the modules. This effort must be coordinated with testing through the Test the Web Forward efforts.
 
+<p>For features that are well known to be widely implemented and deployed, and where implementations are believed to match the specification, the Working Group will make judgment call to move to W3C Recommendation status based on sufficient testing; 100% pass rate will not necessarily be required. In any case where the judgment is debatable, it will be a Working Group decision whether sufficient interoperability has been achieved.</p>
+
 <h2 id='maintenance'>Maintenance</h2>
 
 <p>Althougth we demonstrate interoperability while moving to W3C Recommendation status, the Web Platform changes and we need to continually update the specifications to maintain actual interoperability <em>in the field</em>.
@@ -100,6 +102,23 @@ See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>. T
 <h3 id='team'>Team Participation</h3>
 
 <p>W3C Team will participate in both Groups, integrate data sources for interoperability and prioritarization purposes, and help the leadership with transitioning ideas.</p>
+
+<h3 id='browsers'>Browser engines meeting</h3>
+
+<p>
+  To ensure proper focus and prioritarization, the W3C Team will ensure proper sychronization of vendor interests. As such, the W3C Team will hold quaterly meetings with those with authority over what gets committed to a consumer browser engine codebase. The scheduling, agenda, and summary of those meetings will be made available to the W3C Membership.
+</p>
+
+<h2 id='datadriven'>Data-Driven Group</h2>
+
+<p>There are several existing data metrics to help prioritize interoperability issues:</p>
+
+<ul>
+  <li>Web Page usage and metrics: httparchive, <a href='http://commoncrawl.org/'>commoncrawl</a>, browser metrics (e.g. <a href='https://www.chromestatus.com/metrics/feature/popularity'>blink</a>)</li>
+  <li>Implementation status: <a href='https://www.chromestatus.com/features'>blink</a>, <a href="https://status.modern.ie/">IE</a>, <a href='http://caniuse.com/'>caniuse</a></li>
+  <li>Test metrics: <a href='http://testthewebforward.org/'>Test the Web Forward</a></li>
+  <li>Vendor bug feedback: issues raised against the specifications should be associated with issues raised against implementations</li>
+</ul>
 
 <h2 id='directions'>Technical Directions</h2>
 
@@ -144,10 +163,6 @@ See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>. T
 <dd>Much useful work is still needed in order for the Web platform to be accessible, such as <a href='https://specs.webplatform.org/common-panel/bkardell/gh-pages/'>panels</a>.</dd>
 
 </dl>
-
-
-<p id='footnote1'><em>data metrics</em>: httparchive, commoncrawl, browser usage counters, browser status, tests, test results (wpt, caniuse)</p>
-
 
 <p class='sign'>
 <a href="https://www.twitter.com/plhw3org">@plhw3org</a>, contribute: <a href="https://github.com/w3c/charter-html">w3c/charter-html</a>
