Renamed Intent to Standardize

--- a/html-plan.html
+++ b/html-plan.html
@@ -49,7 +49,7 @@ The W3C Team and Leadership of the Community and Working Groups should ensure pr
 
 <p>Once a proposal becomes mature enough to justify formal standardization, it becomes the mission and responsibility of a Working Group to ensure proper acceptance, through consensus, wide reviews, <a href='#footnote1'>data-driven</a> analysis, and technical merit. A proposal may become ready for standardization efforts because of implementation experience or broad support.
 
-<p>Supporters of the proposal should perform an &quot;<em><a href='intent-to-standardize.html'>Intent to Standardize</a></em>&quot; assessment, outlining use cases, as well as implementation considerations, security, privacy, accessibility, and internationalization impacts. It is the role of the proper Working Group (HTML, CSS, WebApps, etc.) to evaluate such assessment before starting a standardization effort.</p>
+<p>Supporters of the proposal should perform an &quot;<em><a href='request-to-transition.html'>Request to Transition</a></em>&quot; assessment, outlining use cases, as well as implementation considerations, security, privacy, accessibility, and internationalization impacts. It is the role of the proper Working Group (HTML, CSS, WebApps, etc.) to evaluate such assessment before starting a standardization effort.</p>
 
 <h2 id='efficent'>Efficient data-driven standards work</h2>
 
