Added bigs on leaderships

--- a/html-plan.html
+++ b/html-plan.html
@@ -85,7 +85,12 @@ A GPL-compatible with attribution License, such as the <a href='http://www.w3.or
 
 <h3 id='leader'>Leadership</h3>
 
-<p>The Web Platform Incubator Community Group and the HTML Working Group are expected to have well-coordinated good leaders, well accepted and recognized by the community. The leaders should be selected to be magnets for the community - that HTML@W3C has become an effective place to get work done.  The leaders must ensure efficient progress and prevent discussion derailments. Due process, broad consensus, transparency, balance, and openness are the principles guiding the Community and Working Groups.</p>
+<p>The Web Platform Incubator Community Group and the HTML Working Group are expected to have well-coordinated good leaders, well accepted and recognized by the community. The leaders should be selected to be magnets for the community - that HTML@W3C has become an effective place to get work done.  The leaders must ensure efficient progress and prevent discussion derailments. Due process, broad consensus, transparency, balance, and openness are the principles guiding the Community and Working Groups. Note that CG and WG leaders have different qualities:</p>
+      <ul>
+        <li>CG Leadership: outreach, administrivia, coaching</li>
+        <li>WG Leadership: process (avoid derailment, drive decision, drive schedule), technical (expertise in use and implementation), leadership skills/credibility, no W3C Team, no editor</li>
+      </ul>
+
 
  <h3 id='contributions'>Contributions and Communications</h3>
 
