Corrected spelling Corrected spelling of prioritization and quarterly in the Browser engine meeting section.ion

--- a/html-plan.html
+++ b/html-plan.html
@@ -111,7 +111,7 @@ See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>. T
 <h3 id='browsers'>Browser engines meeting</h3>
 
 <p>
-  To ensure proper focus and prioritarization, the W3C Team will ensure proper sychronization of vendor interests. As such, the W3C Team will hold quaterly meetings with those with authority over what gets committed to a consumer browser engine codebase. The scheduling, agenda, and summary of those meetings will be made available to the W3C Membership.
+  To ensure proper focus and prioritization, the W3C Team will ensure proper sychronization of vendor interests. As such, the W3C Team will hold quarterly meetings with those with authority over what gets committed to a consumer browser engine codebase. The scheduling, agenda, and summary of those meetings will be made available to the W3C Membership.
 </p>
 
 <h2 id='datadriven'>Data-Driven Group</h2>
