Chairs and team to manage priority

--- a/html-plan.html
+++ b/html-plan.html
@@ -74,7 +74,7 @@ The amount of resources from the W3C Team will vary depending on the need for in
 <h2 id='maintenance'>Maintenance</h2>
 
 <p>Althougth we demonstrate interoperability while moving to W3C Recommendation status, the Web Platform changes and we need to continually update the specifications to maintain actual interoperability <em>in the field</em>.
-The HTML Working Group&#x27;s goal is to monitor interoperability of the implementations to <strong>achieve actual interoperability</strong>. As such, it is expected to maintain HTML and its extensions, and the Chairs need to ensure that bugs get property triaged, <strong>prioritized</strong>, and addressed. The triage and prioritarization should be based on real-world usage.</p>
+The HTML Working Group&#x27;s goal is to monitor interoperability of the implementations to <strong>achieve actual interoperability</strong>. As such, it is expected to maintain HTML and its extensions, and the Chairs and Team need to ensure that bugs get property triaged, <strong>prioritized</strong>, and addressed. The triage and prioritarization should be based on real-world usage.</p>
 
 <h2 id='org'>Organization</h2>
 
@@ -90,7 +90,6 @@ A GPL-compatible with attribution License, such as the <a href='http://www.w3.or
         <li>CG Leadership: outreach, administrivia, coaching</li>
         <li>WG Leadership: process (avoid derailment, drive decision, drive schedule), technical (expertise in use and implementation), leadership skills/credibility, no W3C Team, no editor</li>
       </ul>
-
 
  <h3 id='contributions'>Contributions and Communications</h3>
 
@@ -165,7 +164,7 @@ See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>. T
 
 <dt id='a11y'>Accessibility</dt>
 
-<dd>Much useful work is still needed in order for the Web platform to be accessible, such as <a href='https://specs.webplatform.org/common-panel/bkardell/gh-pages/'>panels</a>.</dd>
+<dd>Much useful work is still needed in order for the Web platform to be accessible, such as <a href='https://specs.webplatform.org/common-panel/bkardell/gh-pages/'>panels</a>, or the <a href="http://w3c.github.io/aria/html-aam/html-aam.html">Accessibility API mappins</a>.</dd>
 
 </dl>
 
